kubernetes/alert-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alert-service
  template:
    metadata:
      labels:
        app: alert-service
    spec:
      containers:
        - name: alert
          image: gcr.io/airport-cc/alert-service-2023w
          ports:
            - containerPort: 8083
