kubernetes/image-analysis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-analysis-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: image-analysis-service
  template:
    metadata:
      labels:
        app: image-analysis-service
    spec:
      containers:
        - name: image-analysis-service
          image: gcr.io/univiecca1/image-analysis-service-2023w
          ports:
            - containerPort: 8081
