kubernetes/section-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: section-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: section-service
  template:
    metadata:
      labels:
        app: section-service
    spec:
      containers:
        - name: section-service
          image: gcr.io/airport-cc/section-service-2023w
          ports:
            - containerPort: 8084
