kubernetes/camera-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: camera-service
spec:
  selector:
    app: camera-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
