kubernetes/collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collector-service
spec:
  type: LoadBalancer
  selector:
    app: collector-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
