kubernetes/face-recognition-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: face-recognition-service
spec:
  selector:
    app: face-recognition-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
