kubernetes/section-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: section-service
spec:
  selector:
    app: section-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
