kubernetes/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: 34.116.134.46.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: collector-service
                port:
                  number: 8080
            path: /collector(/|$)(.*)
          - pathType: Prefix
            backend:
              service:
                name: section-service
                port:
                  number: 8080
            path: /section(/|$)(.*)
          - pathType: Prefix
            backend:
              service:
                name: camera-service
                port:
                  number: 8080
            path: /camera(/|$)(.*)
          - pathType: Prefix
            backend:
              service:
                name: alert-service
                port:
                  number: 8080
            path: /alert(/|$)(.*)
          - pathType: Prefix
            backend:
              service:
                name: face-recognition-service
                port:
                  number: 8080
            path: /face-recognition(/|$)(.*)
          - pathType: Prefix
            backend:
              service:
                name: image-analysis-service
                port:
                  number: 8080
            path: /image-analysis(/|$)(.*)
